overflow fix

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     animation-name: fade-in;
     animation-duration: 500ms;
+    word-break: break-word;
+    overflow-wrap: anywhere;
+    white-space: normal;
 }
 @keyframes fade-in {
     from {
@@ -41,15 +44,15 @@ a:active {
 }
 @media only screen and (max-width: 768px) {
     .links a {
-        font-size: 200%;
+        font-size: 150%;
     }
     .center {
-        font-size: 200%;
+        font-size: 150%;
     }
     .links a:hover {
-        font-size: 200%;
+        font-size: 150%;
     }
     .links a:active {
-        font-size: 150%;
+        font-size: 120%;
     }
 }
